@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2009-2017 Michael Truog <mjtruog at gmail dot com>
+Copyright (c) 2009-2018 Michael Truog <mjtruog at gmail dot com>
 
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation files (the "Software"),
