@@ -343,7 +343,7 @@
         [{"NODE_PATH", "@prefix@/lib/cloudi-@VERSION@/api/javascript/"}],
         none, default, default,
         5000, 5000, 5000, undefined, undefined, 4, 1, 5, 300,
-        [{nice, 19}]},
+        [{nice, 10}]},
     {external,
         "/tests/count/",
         "@PERL@",
@@ -422,7 +422,7 @@
         none, default, default,
         5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300,
         [{request_timeout_adjustment, true},
-         {nice, 19}]},
+         {nice, 10}]},
     {external,
         "/tests/http_req/",
         "@PERL@",
@@ -538,7 +538,7 @@
         none, default, default,
         5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300,
         [{response_timeout_immediate_max, limit_min},
-         {nice, 19}]},
+         {nice, 10}]},
     {external,
         "/tests/null/response/",
         "@PERL@",
@@ -619,7 +619,7 @@
         none, default, default,
         5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300,
         [{response_timeout_immediate_max, limit_max},
-         {nice, 19}]},
+         {nice, 10}]},
     {external,
         "/tests/null/timeout/",
         "@PERL@",
@@ -1160,7 +1160,7 @@
          {aspects_terminate_before,
           [{cloudi_service_test_msg_size, aspect_terminate}]},
          {scope, cloudi_service_test_msg_size},
-         {nice, 19}]},
+         {nice, 15}]},
     {external,
         "/tests/msg_size/",
         "@PERL@",
@@ -1262,7 +1262,7 @@
         immediate_local, default, default,
         5000, 10000, 10000, [api], undefined, 4, 1, 5, 300,
         [{scope, cloudi_service_test_messaging_javascript},
-         {nice, 19}]},
+         {nice, 15}]},
     {external,
         "/tests/messaging/php/",
         "@PHP@",
